# sentinal-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
AI Cyber Defense Copilot-handoff/ai-cyber-defense-copilot/: README.md
apps/api/: README.md  dependencies.py  exception_handlers.py  main.py  middleware.py  schemas.py
apps/web/: Home.py  README.md  runtime.py  theme.py
assets/: README.md
context/: 01_blueprint.md  03_engineering_constitution.md  current_state.md
core/: README.md  exceptions.py  interfaces.py  schemas.py
core/agents/: README.md  base.py  confidence.py  contracts.py  coordinator.py  incident_response_agent.py  linux_security_agent.py  memory_agent.py  mitre_mapping_agent.py  owasp_security_agent.py  phishing_agent.py  planning_agent.py  registry.py  report_generator_agent.py  soc_analyst_agent.py  threat_hunter_agent.py  vulnerability_agent.py  web_security_agent.py
core/config/: README.md  __init__.py  environment.py  settings.py
core/conversation/: README.md  __init__.py  audit.py  citation_engine.py  compression.py  context_builder.py  conversation_manager.py  exceptions.py  export.py  (+9 more)
data/: README.md
docs/: README.md  agent-design.md  architecture.md  dependency-rules.md  deployment-guide.md  developer-guide.md  engineering-standards.md  mitre.md  owasp.md  roadmap.md  setup-guide.md  threat-pipeline.md  user-guide.md
examples/: README.md
logs/: README.md
scripts/: README.md  check_dependency_rules.py  run_migrations.sh  seed_sample_data.py
tests/: README.md  conftest.py
(+745 files in other folders)
